# BrewVault

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
assets/: colors.css  tailwind.css
src/: backup.rs  file_picker.rs  lib.rs  main.rs  routes.rs  storage.rs  totp.rs
src/components/: account_row.rs  add_button.rs  app_shell.rs  auto_lock_picker.rs  bottom_nav.rs  button.rs  change_password_modal.rs  context_menu.rs  delete_confirm_modal.rs  export_modal.rs  icons.rs  import_modal.rs  input.rs  mod.rs  radio.rs  rename_modal.rs  ring.rs  section_label.rs  setting_row.rs  settings_divider.rs  strength_bar.rs  text_divider.rs  toast.rs  toggle.rs  totp_card.rs
src/models/: app_state.rs  error.rs  mod.rs  pages.rs  totp.rs
src/views/: accounts.rs  add.rs  lock.rs  mod.rs  settings.rs  setup.rs
tests/: storage_roundtrip.rs
