[package]
name = "brew-vault"
version = "0.1.1"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "router", "signals"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "serde_support"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
dirs = "6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["full"] }
argon2 = { version = "0.5.3", features = ["std"] }
aes-gcm = "0.10"
rfd = "0.17"
thiserror = "2"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = "z"
strip = true
lto = true

[dev-dependencies]
tempfile = "3.27.0"
